# sent2vec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_sentence_embeddings_from_pre-trained_models.ipynb
src/: fasttext.cc  fasttext.h  main.cc
